<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blue_purple_background"
    tools:context=".Activities.NoteEditorActivity">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note_title"
        android:maxLength="30"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textColorHint="#96ededed" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="start|top"
        android:hint="@string/start_writing_your_note_here"
        android:textColorHint="#96ededed"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/tags_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_tags"
        android:textColorHint="#96ededed"
        android:textColor="#ffffff" />

</LinearLayout>
