<resources>
    <string name="app_name">Clever Notes</string>
    <string name="search_for_a_note_or_tag">Search for a note</string>
    <string name="enter_note_title">Enter note title…</string>
    <string name="start_writing_your_note_here">Start writing your note here…</string>
    <string name="add_tags">Add tags</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="spell_check">Spell Check</string>
    <string name="generate_tags">Generate Tags</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="version_3_0">Version 3.0</string>
    <string name="about">About</string>
    <string name="this_app_was_created_by_jake_cyr_and_yishuo_tang_n_nversion_3_0">This app was created by Jake Cyr and Yishuo Tang.\n\nVersion 3.0</string>
    <string name="new_note">New Note</string>
    <string name="show_all">Show All</string>
    <string name="tags">Tags</string>
    <string name="welcome_to_nclever_notes">Welcome to\nClever Notes!</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="start_writing">Start Writing</string>

    <string-array name="settings">
        <item>Change Theme</item>
        <item>Change Name</item>
        <item>About</item>
        <item>Reset App</item>
        <item>Export Data</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
